2006-03-06  Aaron Stone  <aaron@serendipity.cx>

	* debug.h, debug.c:
	Removed TRACE_STOP, moved TRACE_MESSAGE to be less-serious than
	TRACE_WARNING.
	* db.c, dbmail-message.c, main.c:
	Removed references to TRACE_STOP.
	* dbmail.conf:
	Changed description of TRACE_SYSLOG config item.
	* acl.c, db.c, dbmail-imapsession.c:
	Fixed an uninitialized structure in the new ACL code.
	* list.c, misc.c, dbmail-mailbox.c:
	Accepted a patch from Matthew Sayler to prevent O(n^2) behavior
	in the list code.

2006-03-06  Paul J Stevens <paul@nfg.nl>

	* dbmail-imapsession.c:
	set loglevel to warning in case of closed socket (closes: #308)
	* sql/mysql/create_tables.mysql, sql/mysql/create_tables_innoDB.mysql, 
	  sql/mysql/migrate_from_1.x_to_2.0.mysql, 
	  sql/mysql/migrate_from_1.x_to_2.0_innodb.mysql:
	set proper default on datetime fields for mysql scripts (closes: #309)
	* dm_cidr.c:
	correct copyright
	* ChangeLog, debian/control:
	fix depends for module packages
	* INSTALL, debian/changelog, debian/rules, test-scripts/testimap.py:
	minor updates
	* acl.c, acl.h, db.c, db.h, dbmail-imapsession.c, dbmailtypes.h, 
	  imapcommands.c:
	fix bug #125 by making getacl more efficient

2006-03-04  Paul J Stevens <paul@nfg.nl>

	* db.c:
	fix the logic in db_imap_append_msg
	* db.c:
	remove temp message after imap append
	* imapcommands.c, lmtp.c, test-scripts/testimap.py:
	test for, and allow padding in timestring during imap append

2006-03-03  Paul J Stevens <paul@nfg.nl>

	* lmtp.c:
	remove double free and release 2.1.5
	
2006-03-01  Paul J Stevens <paul@nfg.nl>

	* check_dbmail_deliver.c, db.c, debian/changelog, dsn.c, lmtp.c, main.c:
	fix a small leak in dsnuser usage

2006-02-28  Aaron Stone  <aaron@serendipity.cx>

	* db.c:
	Added calls to db_free_result per Leif Jackson's testing.
	* timsieve.c:
	Added saner support for the HAVESPACE command per Oleg Lapshin.
	* dbmail-imapsession.c:
	Added code to free the_args at each call to build_args_array_ext.
