@@ -117,6 +117,7 @@ void tree_dump(GTree *t);
 int g_tree_merge(GTree *a, GTree *b, int condition);
 	
 char * dm_stresc(const char * from);
+char * dm_shellesc(const char * command);
 void dm_pack_spaces(char *in);
 void dm_base_subject(char *subject);
 int listex_match(const char *p, const char *s, const char *x, int flags);
